--- a/Views/Product/ProductList.cshtml
+++ b/Views/Product/ProductList.cshtml
@@ -6,7 +6,7 @@
     <div class="row">
     <div class="col-12">
         <h1 class="text-center">List Of Product</h1>
-            <a class=" btn btn-success m-1" asp-action="AddProduct">New Entry</a>
+            <a class=" btn btn-success m-1" asp-action="AddProduct">Add Product</a>
 
         <table class="table">
             <tr class="text-center">
