--- a/Views/Product/ProductDetail.cshtml
+++ b/Views/Product/ProductDetail.cshtml
@@ -55,6 +55,11 @@
     </tr>
 
 </table>
+<form>
+
+<button type="submit" class="btn btn-primary m-1" asp-action="ProductList">Back To Home</button>
+
+</form>
         
                 
             
