--- a/Views/Product/ProductList.cshtml
+++ b/Views/Product/ProductList.cshtml
@@ -1,12 +1,12 @@
 ﻿@model IEnumerable<ProductInformationDemo.Models.ProductMst>
 
 
-
-<div class="container">
     <div class="row">
-    <div class="col-12">
+    <div class="col-12 ">
+
         <h1 class="text-center">List Of Product</h1>
             <a class=" btn btn-success m-1" asp-action="AddProduct">Add Product</a>
+            <a class=" btn btn-success m-1" asp-action="ProductDetail">Detail Product</a>
 
         <table class="table">
             <tr class="text-center">
@@ -41,5 +41,4 @@
         </table>
     </div>
     </div>
-</div>
 
